# projector

./: .gitignore  .golangci.yml  .goreleaser.yml  Cargo.toml  Makefile  README.md  flake.nix  glide.yaml  go.mod  go.sum  main.go
.github/workflows/: ci.yaml  release.yml
cmd/: config.go  find.go  list.go  root.go  run.go  utils.go
cmd/projector/: config.go  main.go
commands/: list.go  root.go  run.go
config/: config.go
pkg/projector/: config.go  config_test.go  projector.go  projector_test.go
pkg/projects/: projects.go  projects2.go
projects/: find.go  finder.go
scripts/: local_install.sh
src/: commands.rs  finder.rs  lib.rs  main.rs  projects.rs
src/commands/: find.rs  list.rs  mod.rs  run.rs
src/find/: config.rs  filter.rs  git.rs  mod.rs  projects.rs
tests/: test_finder.rs
