[package]
authors = ["Mathew Robinson <chasinglogic@gmail.com>"]
description = "A code repository manager."
homepage = "https://github.com/chasinglogic/projector"
categories = ["command-line-interface", "command-line-utilities", "filesystem"]
keywords = ["cli", "search", "files", "utility", "project"]
license = "GPL-3.0"
name = "projector"
readme = "README.md"
repository = "https://github.com/chasinglogic/projector"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
dirs = "5.0.1"
regex = "1.9.3"
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
walkdir = "2.3.3"

[profile.release]
lto = true
