[package]
authors = ["Mathew Robinson <chasinglogic@gmail.com>"]
description = "A code repository manager."
homepage = "https://github.com/chasinglogic/projector"
categories = ["command-line-interface", "command-line-utilities", "filesystem"]
keywords = ["cli", "search", "files", "utility", "project"]
license = "GPL-3.0"
name = "projector"
readme = "README.md"
repository = "https://github.com/chasinglogic/projector"
version = "1.0.4"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"

[profile.release]
lto = true
